[package]
name = "fs-scan"
version = "0.7.0"
authors = ["alexandre"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.14.0"
indicatif = "0.17.2"
clap = { version = "4.0.29", features = ["derive"] }
rustix = { version = "0.36.6", features = ["fs"] }